crates/strider-analyze/tests/snapshots/aarch64__floats__f32_arith.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="Div:f32", shape=box, fillcolor="#1a3020"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 1:f32", shape=ellipse, fillcolor="#1a3020"];
  "13" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "15" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "17" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Neg\nf32 → f32", shape=box, fillcolor="#1a3020"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Mul:f32", shape=box, fillcolor="#1a3020"];
  "21" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:f32", shape=box, fillcolor="#1a3020"];
  "13" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
